--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,3 +1,6 @@
+<!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 {% extends "base.html" %}
 
 {% block title %}
