--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,13 +10,15 @@ Home
 {% endblock %}
 -->
 
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-6 text-center">
-            <h1>Добро пожаловать!</h1>
-            <p>Зарегистрируйтесь или войдите в свой аккаунт.</p>
-            <a href="{{ url_for('register') }}" class="btn btn-success me-2">Регистрация</a>
-            <a href="{{ url_for('login') }}" class="btn btn-primary">Вход</a>
-        </div>
+{% extends "base.html" %}
+
+{% block content %}
+<div class="row justify-content-center mt-5">
+    <div class="col-md-6 text-center">
+        <h1>Добро пожаловать!</h1>
+        <p>Зарегистрируйтесь или войдите в свой аккаунт.</p>
+        <a href="{{ url_for('register') }}" class="btn btn-success me-2">Регистрация</a>
+        <a href="{{ url_for('login') }}" class="btn btn-primary">Вход</a>
     </div>
 </div>
+{% endblock %}
