--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,11 +17,15 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+
                     {% if current_user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('profile') }}">Профиль</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('logout') }}">Выход</a>
                         </li>
-                    {% else %}
+                    {% endif %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('login') }}">Вход</a>
                         </li>
