--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('logout') }}">Выход</a>
                         </li>
-                    {% endif %}
+                    {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('login') }}">Вход</a>
                         </li>
